<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_ads">


        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:src="@drawable/banner" />


        <LinearLayout
            android:id="@+id/llMid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvCamera"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="7dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#0575ae" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:src="@drawable/ic_main_camera" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:text="@string/camera"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text_size" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvFromGallery"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="7dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/teal" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:src="@drawable/ic_main_gallery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:text="@string/from_gallery"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text_size" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvGallery"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="7dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/light_blue" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:src="@drawable/ic_main_from_gallery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:text="@string/my_gallery"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text_size" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvPDF"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_view_height"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="7dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#489b4c" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:src="@drawable/ic_main_pdf" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="4dp"
                            android:text="@string/my_pdf"
                            android:textColor="@color/white"
                            android:textSize="@dimen/main_text_size" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>